# depixelization

./: .gitignore  CMakeLists.txt  README.md
include/: Application.h  Bezier.h  Camera.h  Canvas.h  DepixelizationPipeline.h  Svg.h
shaders/: canvas.frag  canvas.vert  line.frag  line.vert
src/: Application.cpp  Bezier.cpp  Canvas.cpp  DepixelizationPipeline.cpp  main.cpp
